--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+      if (!wcs_add) var wcs_add = {};
+      wcs_add["wa"] = "75a2b495e3afd0";
+      if (window.wcs) {
+        wcs_do();
+      }
+    </script>
   </body>
 </html>
