--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155223924-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YYV3YDX17M"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -10,7 +10,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-155223924-1");
+      gtag("config", "G-YYV3YDX17M");
     </script>
 
     <meta charset="utf-8" />
