--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,19 @@
     </script>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="image/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:url" content="https://hbti.netlify.app/" />
+    <meta property="og:site_name" content="hbti.netlify.app" />
+    <meta property="og:title" content="헬스 능력 테스트 - 헬bti" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://hbti.netlify.app/image/main.png" />
+    <meta property="og:description" content="당신의 헬스 유형과 능력은 과연?" />
     <meta name="viewport" content="width=device-width, initial-scale=1" id="viewportMeta" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
