--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="image/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <meta property="og:url" content="https://hbti.netlify.app/" />
